test_regress/t/t_var_suggest_bad.out
%Error: t/t_var_suggest_bad.v:12: Can't find definition of variable: foobat
%Error: t/t_var_suggest_bad.v:13: Can't find definition of task/function: boobat
%Error: Exiting due to
